--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,18 +12,19 @@
 
 <body>
     <div class="container "></div>
-        <h1>URL Shrinker</h1>
+        <h1 class="text-center">URL Shrinker</h1>
         <form action="/shortUrls" method="POST" class =" my-4 form-inline "> 
             <label for="fullurl" class ="sr-only">Enter URL</label>
             <input required class="form-control mr-3 col " type="url"   placeholder="URL" name="fullurl" id="fullUrl" >
             <button class="btn btn-success " type="submit">Shrink</button>
         </form>
-        <table class=" table table-stripped table-responsive">
+        <div class ="text-center"><a href =<%= surl%> ><%= surl %></a></div>
+        <table  style="width: 100%" class=" table-striped  table table-responsive">
             <thead>
                 <tr>
-                    <th>Full URL</th>
-                    <th>Short URL</th>
-                    <th>Frequency</th>
+                    <th  style="width: 40%" >Full URL</th>
+                    <th  style="width: 40%">Short URL</th>
+                    <th  style="width: 20%">Frequency</th>
                 </tr>
             </thead>
             <tbody>
@@ -37,6 +38,7 @@
             </tbody>
 
         </table> 
+        </div>
     </div>
 </body>
 
